added github authentication to project
