# server.js
@@ -1,12 +1,26 @@
 const express = require('express');
 const mongodb = require('./data/database');
 const bodyParser = require('body-parser');
+const cors = require('cors');
+const dotenv = require('dotenv');
+dotenv.config();
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
 
 const app = express();
 const port = process.env.PORT || 3000;
 
-app.use(bodyParser.json());
-app.use((req, res, next) => {
+app
+  .use(bodyParser.json())
+  .use(session({
+    secret: "secret",
+    resave: false,
+    saveUninitialized: true,
+  }))
+  .use(passport.initialize())
+  .use(passport.session())
+  .use((req, res, next) => {
   res.setHeader('Access-Control-Allow-Origin', '*');
   res.setHeader(
     'Access-Control-Allow-Headers',
@@ -14,8 +28,41 @@ app.use((req, res, next) => {
   );
   res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
   next();
+  })
+  .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH']}))
+  .use(cors({ origin: '*'}))
+  .use('/', require('./routes'));
+
+passport.use(new GitHubStrategy({
+  clientID: process.env.GITHUB_CLIENT_ID,
+  clientSecret: process.env.GITHUB_CLIENT_SECRET,
+  callbackURL: process.env.CALLBACK_URL
+},
+function(accessToken, refreshToken, profile, done) {
+  return done(null, profile);
+}
+))
+
+passport.serializeUser((user, done) => {
+  done(null, user);
 });
-app.use('/', require('./routes'));
+passport.deserializeUser((user, done) => {
+  done(null, user);
+});
+
+app.get('/', (req, res) => { 
+  const name = req.user?.displayName || req.user?.username || 'Unknown';
+  res.send(req.session.user !== undefined ? `Logged in as ${name}` : 'Logged Out')});
+
+app.get('/github/callback', passport.authenticate('github', {
+  failureRedirect: '/api-docs'}),
+  (req, res) => {
+    req.session.user= req.user;
+    res.redirect('/');
+  }
+)
+
+
 mongodb.initDb((err) => {
     if (err) {
       console.log(err);
